[package]
name = "rao-forward"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive"] }
ndarray = "0.16.1"
rao = "0.1.11"
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
zernike = "0.2.1"
